--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,13 @@ body {
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    /*paleta de colores aleph*/
+    --electric-violet: 271 97% 52%;
+    --persian-indigo: 248 63% 30%;
+    --federal-blue: 253 85% 18%;
+    --mauve: 264 76% 85%;
+    --rich-black: 240 33% 9%;
   }
 
   .dark {
