--- a/app/globals.css
+++ b/app/globals.css
@@ -228,6 +228,14 @@ body {
   text-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
 }
 
+.hide-scrollbar {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE y Edge */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari y Opera */
+}
+
 /* Animación de desplazamiento para el botón scroll */
 @keyframes bounce {
   0%, 100% {
