--- a/app/globals.css
+++ b/app/globals.css
@@ -41,10 +41,10 @@ body {
 
     /*paleta de colores aleph*/
     --electric-violet: 271 97% 52%;
-    --persian-indigo: 248% 63% 30%;
-    --federal-blue: 253% 85% 18%;
-    --mauve: 264% 76% 85%;
-    --rich-black: 240% 33% 9%;
+    --persian-indigo: 248 63% 30%;
+    --federal-blue: 253 85% 18%;
+    --mauve: 264 76% 85%;
+    --rich-black: 240 33% 9%;
   }
 
   .dark {
